--- a/Web/style.css
+++ b/Web/style.css
@@ -5,16 +5,16 @@
 }
 
 body {
-    background-image: url('asset/bg.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-  }
+    
+    background-color:#E9E9E9;
+    text-align:center;
+}
 
 nav{
     display: flex;
-    justify-content: space-around;
     align-items: center;
+    justify-content: space-around;
+    font-size: 20px;
     min-height: 6vh;
     background-color: #172F9F;
     font-family: sans-serif;
@@ -24,5 +24,59 @@ nav{
     color: rgb(255, 255, 255);
     text-transform: uppercase;
     letter-spacing: 2px;
-    font-size: 25px;
+    font-size: 20px;
+}
+
+.info{
+    font-family: sans-serif;
+    font-size: 15px;
+    justify-content: space-around;
+    flex-direction: column;
+}
+
+.form{
+    align-items: center;
+    width: 50%;
+    position: relative;
+    height: 50px;
+    font-family: sans-serif;
+}
+
+.form input {
+    width:30%;
+    height:50%;
+    color: #595f6e;
+    padding-top: 10px;
+    border: none;
+}
+
+.form label{
+    position: absolute;
+    bottom: 0px;
+    width: 0;
+    height: 135%;
+    pointer-events: none;
+}
+
+button{
+    display: inline-block;
+    background-color:#555555;
+    color: white;
+    font-family: sans-serif;
+    border:none;
+    padding: 5px 5px;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 6px;
+}
+
+button:hover{
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    cursor: pointer;
+}
+
+button:active {
+    background-color:#494949;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
 }
